--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 #image {
     height: 450px;
     width: 50%;
-    background-image: url("/images/image-product-desktop.jpg");
+    background-image: url("image-product-desktop.jpg");
     background-size: contain;
     background-repeat: no-repeat;
     border-radius: 10px 0 0 10px;
